[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/actors/portal.gd" type="Script" id=1]
[ext_resource path="res://scripts/game/battle_area.gd" type="Script" id=2]
[ext_resource path="res://textures/sprites/ui/marker.png" type="Texture" id=3]
[ext_resource path="res://scenes/actors/map.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/env/nanostation.dae" type="PackedScene" id=5]
[ext_resource path="res://models/env/kiosk.dae" type="PackedScene" id=6]
[ext_resource path="res://scenes/actors/ui/marker.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/env/transformer.dae" type="PackedScene" id=8]
[ext_resource path="res://models/env/casino.dae" type="PackedScene" id=9]
[ext_resource path="res://models/env/terrain.dae" type="PackedScene" id=10]
[ext_resource path="res://models/env/barrier.dae" type="PackedScene" id=11]
[ext_resource path="res://textures/sprites/ui/radius.png" type="Texture" id=12]
[ext_resource path="res://audio/sounds/turret_build.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/sounds/turret_upgrade.wav" type="AudioStream" id=14]

[sub_resource type="SpatialMaterial" id=1]
render_priority = 2
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_cull_mode = 2
params_depth_draw_mode = 1
albedo_texture = ExtResource( 3 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 1, 1 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
render_priority = 1
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_specular_mode = 4
params_cull_mode = 2
params_depth_draw_mode = 1
albedo_color = Color( 0.396078, 0.396078, 0.396078, 1 )
albedo_texture = ExtResource( 12 )

[node name="battle_area" type="Spatial"]
script = ExtResource( 2 )

[node name="light" type="DirectionalLight" parent="."]
transform = Transform( 0.482963, 0.546018, -0.684552, 0.12941, 0.72868, 0.672517, 0.866025, -0.413389, 0.281265, -20.5, 27.0848, 13.9941 )
light_color = Color( 1, 0.701961, 0.0705882, 1 )
light_specular = 0.57
shadow_enabled = true

[node name="map" parent="." instance=ExtResource( 4 )]

[node name="cursor" type="Spatial" parent="."]
visible = false

[node name="marker" parent="cursor" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh = SubResource( 2 )

[node name="radius" type="MeshInstance" parent="cursor"]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, -0.1, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="portal" parent="." instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 0, 13.6807 )
script = ExtResource( 1 )

[node name="portal2" parent="." instance=ExtResource( 5 )]
transform = Transform( 4.17233e-07, 0, -1, 0, 1, 0, 1, 0, 4.17233e-07, -14, 0, -13.7202 )
script = ExtResource( 1 )

[node name="env" type="Spatial" parent="."]

[node name="kiosk" parent="env" instance=ExtResource( 6 )]
transform = Transform( 2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, 18.2464, 0, 0.5 )

[node name="transformer" parent="env" instance=ExtResource( 8 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 19.2464, 7.10543e-15, 0 )

[node name="casino" parent="env" instance=ExtResource( 9 )]
transform = Transform( 1.57533e-05, 0, -1, 0, 0.3, 0, 0.3, 0, 5.2508e-05, 17.8479, 1.66916, 0.547073 )

[node name="terrain" parent="env" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.05, 0 )

[node name="barriers" type="Spatial" parent="."]

[node name="barrier" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 10.5 )

[node name="barrier2" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 10.5 )

[node name="barrier3" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 10.5 )

[node name="barrier4" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.5 )

[node name="barrier5" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 10.5 )

[node name="barrier6" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 10.5 )

[node name="barrier7" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 10.5 )

[node name="barrier9" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 10.5 )

[node name="barrier8" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 10.5 )

[node name="barrier10" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, -1, 0, 1, 0, 1.2, 0, -1.62921e-07, -17.5, 0, 8 )

[node name="barrier11" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, -1, 0, 1, 0, 1.2, 0, -1.62921e-07, -17.5, 0, 4 )

[node name="barrier12" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, -1, 0, 1, 0, 1.2, 0, -1.62921e-07, -17.5, 0, 9.53674e-07 )

[node name="barrier13" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, -1, 0, 1, 0, 1.2, 0, -1.62921e-07, -17.5, 0, -4 )

[node name="barrier14" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, -1, 0, 1, 0, 1.2, 0, -1.62921e-07, -17.5, 0, -8 )

[node name="barrier15" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, -16, 0, -10.5 )

[node name="barrier16" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, -12, 0, -10.5 )

[node name="barrier17" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, -8, 0, -10.5 )

[node name="barrier18" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, -4, 0, -10.5 )

[node name="barrier19" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, 0, 0, -10.5 )

[node name="barrier20" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, 4, 0, -10.5 )

[node name="barrier21" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, 8, 0, -10.5 )

[node name="barrier22" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, 12, 0, -10.5 )

[node name="barrier23" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.2, 0, 3.25841e-07, 0, 1, 0, -3.9101e-07, 0, -1, 16, 0, -10.5 )

[node name="barrier24" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, 1, 0, 1, 0, -1.2, 0, -1.62921e-07, 17.5, 0, -8 )

[node name="barrier25" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, 1, 0, 1, 0, -1.2, 0, -1.62921e-07, 17.5, 0, -4 )

[node name="barrier26" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, 1, 0, 1, 0, -1.2, 0, -1.62921e-07, 17.5, 0, 4 )

[node name="barrier27" parent="barriers" instance=ExtResource( 11 )]
transform = Transform( -1.95505e-07, 0, 1, 0, 1, 0, -1.2, 0, -1.62921e-07, 17.5, 0, 8 )

[node name="enemies" type="Spatial" parent="."]

[node name="turrets" type="Spatial" parent="."]

[node name="fx" type="Spatial" parent="."]

[node name="snd_turret_build" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="snd_turret_upgrade" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
[connection signal="mouse_change_cell" from="map" to="." method="_on_map_mouse_change_cell"]
[connection signal="on_cell_click" from="map" to="." method="_on_map_cell_click"]
[connection signal="create_enemy" from="portal" to="." method="_on_portal_create_enemy"]
[connection signal="create_enemy" from="portal2" to="." method="_on_portal_create_enemy"]
